--- a/InventoryManager/src/Invoice/ViewInvoice.html
+++ b/InventoryManager/src/Invoice/ViewInvoice.html
@@ -24,6 +24,9 @@
                 </div>
                 <div class="col">
                     <label><strong>Status: </strong></label>
+                    <a href="#collapseHelp" data-bs-toggle="collapse" href="#collapseHelp" role="button" aria-expanded="false" aria-controls="collapseHelp">
+                        <i class="fa-solid fa-circle-info" title="General Delivery Status of the order"></i>
+                    </a>
                     <label class="viewData" data-bind="invoiceStatus">Bought</label>
                     <select name="status" id="status" hidden class="editData" data-bind="invoiceStatus" tabindex="0" >
                         <option value="Bought">Bought</option>
@@ -31,29 +34,28 @@
                         <option value="Cancelled">Cancelled</option>
                         <option value="Pending">Pending</option>
                     </select>
-                    <a href="#collapseHelp" data-bs-toggle="collapse" href="#collapseHelp" role="button" aria-expanded="false" aria-controls="collapseHelp">
-                        <i class="fa-solid fa-circle-info" title="General Delivery Status of the order"></i>
-                    </a>
-					<div class="collapse bg-primary text-white" id="collapseHelp">
+					<div class="collapse bg-primary text-white p-1" id="collapseHelp">
 						<span>General Delivery Status of the order</span>
 					</div>
                 </div>
             </div>
             <div class="row p-1">
                 <div class="col">
-                    <label><strong>External Number ID:
-                    </strong></label>
-                    <label class="viewData" data-bind="invoiceExternalNumber"></label>
-                    <input type="number" hidden class="editData" data-bind="invoiceExternalNumber" />
+                    <label><strong>External Number ID:</strong></label>
                     <a href="#collapseHelp2" data-bs-toggle="collapse" href="#collapseHelp2" role="button" aria-expanded="false" aria-controls="collapseHelp2">
                         <i class="fa-solid fa-circle-info" title="ID number assigned by the supplier ordering system"></i>
                     </a>
-					<div class="collapse bg-primary text-white" id="collapseHelp2">
+                    <label class="viewData" data-bind="invoiceExternalNumber"></label>
+                    <input type="number" hidden class="editData" data-bind="invoiceExternalNumber" />
+					<div class="collapse bg-primary text-white p-1" id="collapseHelp2">
 						<span>ID number assigned by the supplier ordering system. Used for tracking purposes</span>
 					</div>
                 </div>
                 <div class="col">
                     <label><strong>Sub Status: </strong></label>
+                    <a href="#collapseHelp3" data-bs-toggle="collapse" href="#collapseHelp3" role="button" aria-expanded="false" aria-controls="collapseHelp3">
+                        <i class="fa-solid fa-circle-info" title="Specific Delivery Status of the order"></i>
+                    </a>
                     <label class="viewData" data-bind="invoiceSubStatus">Complete</label>
                     <select name="subStatus" id="subStatus" hidden class="editData" data-bind="invoiceSubStatus">
                         <option value="Complete">Complete</option>
@@ -61,10 +63,7 @@
                         <option value="Cancelled">Cancelled</option>
                         <option value="Pending">Pending</option>
                     </select>
-                    <a href="#collapseHelp3" data-bs-toggle="collapse" href="#collapseHelp3" role="button" aria-expanded="false" aria-controls="collapseHelp3">
-                        <i class="fa-solid fa-circle-info" title="Specific Delivery Status of the order"></i>
-                    </a>
-					<div class="collapse bg-primary text-white" id="collapseHelp3">
+					<div class="collapse bg-primary text-white p-1" id="collapseHelp3">
 						<span>Specific Delivery Status of the order</span>
 					</div>
                 </div>
@@ -110,12 +109,12 @@
                 </div>
                 <div class="col">
                     <label><strong>Order Completion Date: </strong></label>
-                    <label class="viewData" data-bind="invoiceArriveDate">2022-07-22</label>
-                    <input type="date" hidden class="editData" data-bind="invoiceArriveDate"/>
                     <a href="#collapseHelp4" data-bs-toggle="collapse" href="#collapseHelp4" role="button" aria-expanded="false" aria-controls="collapseHelp4">
                         <i class="fa-solid fa-circle-info" title="Date when all items in order were delivered in full"></i>
                     </a>
-					<div class="collapse bg-primary text-white" id="collapseHelp4">
+                    <label class="viewData" data-bind="invoiceArriveDate">2022-07-22</label>
+                    <input type="date" hidden class="editData" data-bind="invoiceArriveDate"/>
+					<div class="collapse bg-primary text-white p-1" id="collapseHelp4">
 						<span>Date when all items in order were "Complete Delivered"</span>
 					</div>
                 </div>
