--- a/InventoryManager/src/Order/Order.html
+++ b/InventoryManager/src/Order/Order.html
@@ -16,14 +16,13 @@
       <div class="col-1">
       </div> 
       <div class="col">
-              <a href="../Main/Main.html?page=newOrder"><button  type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg" style="color:white" title="Add Item"></i> New order</button></a>
+              <a href="../Main/Main.html?page=newOrder"><button id="btnNewOrder" type="submit" value="Submit"><i class="fa-solid fa-plus fa-lg" style="color:white" title="Add Item"></i> New order</button></a>
       </div>       
   </div>
       <table id="orderTable">
           <thead>
               <tr class="header">
-                  <th>Id</th>
-                  <th>External ID</th>
+                  <th>Order Number</th>
                   <th>Description</th>
                   <th>Subtotal </th>
                   <th style="width:150px;">Created At</th>
