--- a/InventoryManager/src/Main/Main.html
+++ b/InventoryManager/src/Main/Main.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="../appstyle.css">
     <link rel="stylesheet" href="../Commons/css/Global.css">
 
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"
+        integrity="sha512-GsLlZN/3F2ErC5ifS5QtgpiJtWd43JWSuIgh7mbzZ8zBps+dvLusV+eNQATqgA/HdeKFVgA5v3S/cIrLF7QnIg=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    ></script>
     <script src="../Commons/js/Global.js"></script>
     <script src="../Shared/sharedFunctions.js"></script>
     <script src="./Main.js"></script>
