login image changes

--- a/InventoryManager/src/Login/login.html
+++ b/InventoryManager/src/Login/login.html
@@ -13,11 +13,11 @@
 <body class="p-3 mb-2 bg-dark">
   <div class="row justify-content-center p-5 text-center">
     <!-- style="width: 400px;" -->
-    <div class="card p-3 bg-light" style="max-width: 400px; max-height:50%;"> 
+    <div class="card p-3 bg-light" style="max-width: 350px;"> 
       <form id="form-signin" class="g-3 m-1" onsubmit="myFunction(event)" aria-label="Login Form">
         
         <div class="row m-1">
-          <img class="mb-4" src="./login1.png" alt="" max-width="300" alt="login logo">
+          <img class="mb-2 p-2" src="./login1.png" alt="" max-width="120 px" alt="login logo">
           <h1 class="h3 mb-3 font-weight-normal" aria-label="Please sign in">Please sign in</h1>
         </div>
         <div class="row m-1">
