--- a/InventoryManager/src/Reports/printInvoice.html
+++ b/InventoryManager/src/Reports/printInvoice.html
@@ -39,11 +39,11 @@
 							<div class="invoice-info" id="invoice_wrapper">
 								<div class="invoice-headar">
 									<div class="row">
-										<div class="col-sm-6">
+										<div class="col-sm-6 d-flex">
 											<div class="invoice-name">
 												<!-- logo started -->
 												<div class="logo">
-													<img src="../Commons/images/EmmasLogo.png" alt="logo" width="30%" height="30%" />
+													<img src="../Commons/images/EmmasLogo.png" alt="logo" style="margin: 0 auto; width: 80%" />
 												</div>
 												<!-- logo ended -->
 											</div>
