--- a/InventoryManager/src/Person/IndexPerson.html
+++ b/InventoryManager/src/Person/IndexPerson.html
@@ -31,7 +31,7 @@
                     </div>
                     <input type="text" id="myInput" onkeyup="personTableF.filterTable()" class="form-control"
                         placeholder="Search person by..." aria-label="Search person by..."
-                        aria-describedby="basic-addon1">
+                        aria-describedby="basic-addon1"/>
                 </div>
             </div>
         </div>
